made homepage responsive with add dog form moving to top and kennel below, with footer becoming fixed on small screen sizes

--- a/client/src/components/AppNav/AppNav.css
+++ b/client/src/components/AppNav/AppNav.css
@@ -19,16 +19,16 @@ a {
 
 #status {
   color: white;
-  font-size: 25px;
+  font-size: 20px;
   padding-right: 20px;
-  margin-top: 14px;
+  margin-top: 18px;
   padding-top: 0px;
 }
 
 .link-name {
   font-family: 'Raleway', sans-serif;
   color: white;
-  font-size: 25px;
+  font-size: 20px;
   padding-right: 20px;
   margin-top: 14px;
 }
