--- a/client/src/components/Footer/Footer.css
+++ b/client/src/components/Footer/Footer.css
@@ -1,10 +1,10 @@
 .footer {
-  position: absolute;
+  position: sticky;
   width: 100%;
   background-color: #285a84;
   text-align: center;
   padding: 12px 20px;
-  z-index: 20;
+  /* z-index: 20; */
   border-top: medium solid #85c872;
 }
 
