--- a/client/src/pages/HomePage/HomePage.css
+++ b/client/src/pages/HomePage/HomePage.css
@@ -42,7 +42,7 @@ div.main-homepage {
 }
 
 #greeting-col {
-  padding-top: 15px;
+  padding-top: 25px;
   padding-bottom: 10px;
   margin-right: 50%;
   margin-left: 50%;
@@ -99,6 +99,16 @@ div.main-homepage {
 
 @media screen and (max-width: 700px) {
   div.main-homepage {
-    margin-left: 0;
+    margin-left: 0px !important;
+  }
+
+  .footer {
+    position: fixed;
+    bottom: 0;
+    z-index: 11;
+  }
+
+  #map-row {
+    margin-bottom: 70px !important;
   }
 }
